--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,16 @@ jobs:
         - uses: actions/checkout@v2
         - uses: actions/setup-node@v1
           with:
-            node-version: 16
+            node-version: 19
+        - run: npm run build
+        - run: npm run deploy
+
+    test:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - uses: actions/setup-node@v1
+          with:
+            node-version: 19
         - run: npm ci
         - run: npm run test
-        - run: npm run build
